# achi

./: .gitignore
achi/: .dockerignore  AI_intern_resume copy.docx  AI_intern_resume.docx  Dockerfile  Qdrant向量数据库与简历优化教程.md  README.md  __init__.py  client.py  client_http.py  client_sse.py  client_stdio_backup.py  crawl_51job.py  crawl_51job_shanghai.py  crawl_boss.py  docker-compose.yml  info.md  job.txt  job_crawler_51job.py  listjob.py  llm.py  loaddoc.py  main.py  prompt.py  pyproject.toml  server.py  server_backup.py  server_http.py  server_sse.py  test_mcp.py  test_server.py  writeresume.py
achi/llm/: llm.py
achi/plans/: Qdrant向量数据库与简历优化教程.md  job_matching_result.md
achi/prompt/: prompt.py
achi/qdrant/: resume_importer.py  vector_db.py
achi/src/jobsearch_mcp_server/: __init__.py  __main__.py  server.py
achi/src/jobsearch_mcp_server/crawler/: __init__.py  crawl_51job.py
achi/src/jobsearch_mcp_server/llm/: llm.py
achi/src/jobsearch_mcp_server/prompt/: prompt.py
achi/src/jobsearch_mcp_server/resume_tools/: __init__.py  rag_resume.py  resume_enhancer.py  resume_parser.py
achi/src/jobsearch_mcp_server/tools/: job.py
achi/src/jobsearch_mcp_server/tracker/: __init__.py  tracker.py
achi/tools/: job.py  resume.py
achi/web/: index.html
blog-search-fix/: .gitignore  README.md  package.json  tailwind.config.ts
blog-search-fix/app/: globals.css  layout.tsx  page.tsx
blog-search-fix/components/: Search.tsx
blog-search-fix/content/: GitHub热榜 MOC.md  trending-2026-05-30.md  trending-2026-05-31.md  trending-2026-06-01.md  trending-2026-06-03.md  (+6 more)
(+3 files in other folders)
