[project]
name = "achi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "mcp[cli]>=1.27.1",
    "numpy>=2.0",
    "openai>=2.37.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "selenium>=4.43.0",
    "sentence-transformers>=5.5.0",
    "torch==2.5.1",             # 精确锁定，2.6+ 在部分 Win 系统上 DLL 初始化失败
    "transformers>=4.41.0,<5.0.0",  # 兼容 torch 2.5.1，5.x 强制要求 torch>=2.6
    "unstructured>=0.22.31",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
